Added live links

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;600;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;600;700&display=swap" rel="stylesheet" />
     <style>
         body{
             display: grid;
@@ -49,12 +49,12 @@
                                 <tr>
                                     <td style="padding-right: 5px;">
                                         <a href="#!" target="_blank" title="Facebook">
-                                            <img src="./images/fb.png" alt="facebook" width="28" height="28" style="display: block; width: 28px; height: 28px;" />
+                                            <img src="https://developer-zahid.github.io/Tri-State-Supplies-Email-Signature/images/fb.png" alt="facebook" width="28" height="28" style="display: block; width: 28px; height: 28px;" />
                                         </a>
                                     </td>
                                     <td>
                                         <a href="https://www.linkedin.com/in/raymond-kauffman/" target="_blank" title="Linkedin">
-                                            <img src="./images/in.png" alt="linkedin" width="28" height="28" style="display: block; width: 28px; height: 28px;" />
+                                            <img src="https://developer-zahid.github.io/Tri-State-Supplies-Email-Signature/images/in.png" alt="linkedin" width="28" height="28" style="display: block; width: 28px; height: 28px;" />
                                         </a>
                                     </td>
                                 </tr>
@@ -66,9 +66,9 @@
         </tr>
         <tr>
             <td>
-                <img src="./images/banner.png" alt="Brand Logo" width="420" height="114" style="display: block; width: 420px;" />
+                <img src="https://developer-zahid.github.io/Tri-State-Supplies-Email-Signature/images/banner.png" alt="Brand Logo" width="420" height="114" style="display: block; width: 420px;" />
                 <a href="https://maps.app.goo.gl/Xgyf3Kzba1C2e2edA" target="_blank" title="Address">
-                    <img src="./images/address.png" alt="address" width="420" height="35" style="display: block; width: 420px;" />
+                    <img src="https://developer-zahid.github.io/Tri-State-Supplies-Email-Signature/images/address.png" alt="address" width="420" height="35" style="display: block; width: 420px;" />
                 </a>
             </td>
         </tr>
