--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;600;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
         body{
             display: grid;
@@ -18,27 +18,27 @@
     <table border="0" cellspacing="0" cellpadding="0" width="420" style="width: 420px;">
         <tr>
             <td style="padding-bottom: 11px;">
-                <p style="color: #231F20; font-size: 19pt; font-family: 'Sora', serif; margin: 0;">
+                <p style="color: #231F20; font-size: 21pt; font-family: 'Roboto', sans-serif; margin: 0;">
                     <strong style="font-weight: 700;">Raymond Kauffman</strong>
                 </p>
-                <p style="color: #B97727; font-size: 10.5pt; font-weight: 300; font-family: 'Sora', serif; margin-top: 4px; margin-bottom: 20px;">
+                <p style="color: #B97727; font-size: 11pt; font-weight: 400; font-family: 'Roboto', sans-serif; margin-top: 4px; margin-bottom: 20px;">
                     Managing Director
                 </p>
                 <table border="0" cellspacing="0" cellpadding="0" width="100%" style="width: 100%;">
                     <tr>
                         <td style="vertical-align: bottom;">
-                            <p style="color: #231F20; font-size: 10.5pt; font-family: 'Sora', serif; line-height: 1.5; margin: 0;">
-                                <strong style="font-weight: 600;">Phone:</strong>
+                            <p style="color: #231F20; font-size: 11pt; font-family: 'Roboto', sans-serif; line-height: 1.5; margin: 0;">
+                                <strong style="font-weight: 500;">Phone:</strong>
                                 <a href="tel:(609) 757-2878" target="_blank" title="Phone" style="color: #231F20; font-weight: 300; text-decoration: none !important;">
                                     <span style="color: #231F20; text-decoration: none !important;">(609) 757-2878</span>
                                 </a>
                                 <br>
-                                <strong style="font-weight: 600;">Email:</strong>
+                                <strong style="font-weight: 500;">Email:</strong>
                                 <a href="mailto:sales@tristatesupplies.biz" target="_blank" title="Email" style="color: #231F20; font-weight: 300; text-decoration: none !important;">
                                     <span style="color: #231F20; text-decoration: none !important;">sales@tristatesupplies.biz</span>
                                 </a>
                                 <br>
-                                <strong style="font-weight: 600;">Web:</strong>
+                                <strong style="font-weight: 500;">Web:</strong>
                                 <a href="https://www.tristatesupplies.biz/" target="_blank" title="Website" style="color: #231F20; font-weight: 300; text-decoration: none !important;">
                                     <span style="color: #231F20; text-decoration: none !important;">www.tristatesupplies.biz</span>
                                 </a>
