Added new social links

--- a/email-signature.html
+++ b/email-signature.html
@@ -41,13 +41,23 @@
                             <table border="0" cellspacing="0" cellpadding="0">
                                 <tr>
                                     <td style="padding-right: 5px;">
-                                        <a href="#!" target="_blank" title="Facebook">
+                                        <a href="https://www.facebook.com/tristatesuppliesandservices" target="_blank" title="Facebook">
                                             <img src="https://developer-zahid.github.io/Tri-State-Supplies-Email-Signature/images/fb.png" alt="facebook" width="28" height="28" style="display: block; width: 28px; height: 28px;" />
                                         </a>
                                     </td>
+                                    <td style="padding-right: 5px;">
+                                        <a href="https://www.instagram.com/tristatesuppliesandservicesllc/" target="_blank" title="Instagram">
+                                            <img src="https://developer-zahid.github.io/Tri-State-Supplies-Email-Signature/images/ig.png" alt="instagram" width="28" height="28" style="display: block; width: 28px; height: 28px;" />
+                                        </a>
+                                    </td>
+                                    <td style="padding-right: 5px;">
+                                        <a href="https://www.tiktok.com/@tristatesupplies" target="_blank" title="TikTok">
+                                            <img src="https://developer-zahid.github.io/Tri-State-Supplies-Email-Signature/images/tt.png" alt="tiktok" width="28" height="28" style="display: block; width: 28px; height: 28px;" />
+                                        </a>
+                                    </td>
                                     <td>
-                                        <a href="https://www.linkedin.com/in/raymond-kauffman/" target="_blank" title="Linkedin">
-                                            <img src="https://developer-zahid.github.io/Tri-State-Supplies-Email-Signature/images/in.png" alt="linkedin" width="28" height="28" style="display: block; width: 28px; height: 28px;" />
+                                        <a href="https://wa.me/+16097572878" target="_blank" title="Whatsapp">
+                                            <img src="https://developer-zahid.github.io/Tri-State-Supplies-Email-Signature/images/wa.png" alt="whatsapp" width="28" height="28" style="display: block; width: 28px; height: 28px;" />
                                         </a>
                                     </td>
                                 </tr>
